--- a/src/Templates/error.html.twig
+++ b/src/Templates/error.html.twig
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title><?php echo $title; ?></title>
+    <title>{{ title }}</title>
 </head>
 <body>
-<h1><?php echo $title; ?></h1>
+{{ title }}
 </body>
 </html>
