--- a/src/Templates/layouts/main.html.twig
+++ b/src/Templates/layouts/main.html.twig
@@ -4,7 +4,7 @@
     {% block head %}
     <meta http-equiv="Content-Language" content="English" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" type="text/css" href="/src/Templates/style.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/src/templates/style.css" media="screen" />
     {% endblock %}
 </head>
 <body>
