--- a/src/templates/insert_news.html.twig
+++ b/src/templates/insert_news.html.twig
@@ -6,11 +6,15 @@
 {% endblock %}
 
 
+
 {% block content %}
 
-    <h1>{{ artical.title }}</h1>
+{% for error in errors %}
+    <div>{{ error }}</div>
+{% endfor %}
 
-    <artical>{{ title }}</artical>
+
+    <h1>{{ title }}</h1>
     {{ form|raw }}
 
 {% endblock %}
